--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # Dependencies
-/node_modules
+**/node_modules/
 /.pnp
 .pnp.js
 
@@ -23,8 +23,9 @@ yarn-debug.log*
 yarn-error.log*
 
 # Local env files
-.env*.local
-.env
+**/.env
+**/.env.local
+**/.env.*.local
 
 # Vercel
 .vercel
