--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
     "postcss": "^8",
+    "supabase": "^2.22.6",
     "tailwindcss": "^3.4.1"
   }
 }
