--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -64,16 +64,16 @@ enable_confirmations = true
 # "discord", "facebook", "github", "gitlab", "google", "keycloak", "linkedin", "notion", "twitch",
 # "twitter", "slack", "spotify", "workos", "zoom".
 [auth.external.apple]
-enabled = true
+enabled = false
 client_id = ""
 secret = ""
 
 [auth.external.google]
-enabled = true
+enabled = false
 client_id = ""
 secret = ""
 
 [auth.external.twitter]
-enabled = true
+enabled = false
 client_id = ""
 secret = "" 
