--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "lucide-react": "^0.507.0",
     "moment-timezone": "^0.5.48",
     "next": "^15.3.1",
+    "next-themes": "^0.4.6",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.5.0",
