--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^16.5.0",
+    "framer-motion": "^12.10.0",
     "lucide-react": "^0.507.0",
     "moment-timezone": "^0.5.48",
     "next": "^15.3.1",
