--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@hookform/resolvers": "^5.0.1",
     "@radix-ui/react-label": "^2.1.4",
     "@supabase/auth-helpers-nextjs": "^0.8.7",
     "@supabase/supabase-js": "^2.49.4",
@@ -32,9 +33,11 @@
     "next-themes": "^0.4.6",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.56.2",
     "react-icons": "^5.5.0",
     "tailwind-merge": "^3.2.0",
-    "typescript": "^5"
+    "typescript": "^5",
+    "zod": "^3.24.4"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
