--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
   "description": "",
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
+    "@radix-ui/react-dropdown-menu": "^2.1.14",
     "@radix-ui/react-label": "^2.1.4",
+    "@radix-ui/react-select": "^2.2.4",
+    "@radix-ui/react-tabs": "^1.1.11",
     "@supabase/auth-helpers-nextjs": "^0.8.7",
     "@supabase/supabase-js": "^2.49.4",
     "@types/lodash": "^4.17.16",
@@ -38,6 +41,8 @@
     "react-dom": "^18",
     "react-hook-form": "^7.56.2",
     "react-icons": "^5.5.0",
+    "recharts": "^2.15.3",
+    "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
     "typescript": "^5",
     "zod": "^3.24.4",
