--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@radix-ui/react-dropdown-menu": "^2.1.14",
     "@radix-ui/react-label": "^2.1.4",
     "@radix-ui/react-select": "^2.2.4",
+    "@radix-ui/react-switch": "^1.2.5",
     "@radix-ui/react-tabs": "^1.1.11",
     "@supabase/auth-helpers-nextjs": "^0.8.7",
     "@supabase/supabase-js": "^2.49.4",
@@ -39,13 +40,13 @@
     "nprogress": "^0.2.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-hook-form": "^7.56.2",
+    "react-hook-form": "^7.56.4",
     "react-icons": "^5.5.0",
     "recharts": "^2.15.3",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
     "typescript": "^5",
-    "zod": "^3.24.4",
+    "zod": "^3.25.42",
     "zustand": "^5.0.4"
   },
   "devDependencies": {
@@ -54,7 +55,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
     "postcss": "^8",
-    "supabase": "^2.22.6",
+    "supabase": "^2.23.4",
     "tailwindcss": "^3.4.1"
   }
 }
